// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render empty 1`] = `
<div
  className="!bg-blue-200 flex grow m-4 rounded"
>
  <div
    className="justify-start flex flex-wrap align-start justify-start"
  >
    <div
      className="ant-card ant-card-bordered !m-8 w-64 h-96 flex flex-col justify-between overflow-hidden"
    >
      <div
        className="ant-card-body"
        style={Object {}}
      >
        create.description
      </div>
      <ul
        className="ant-card-actions"
      >
        <li
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <span>
            <button
              className="p-button p-component"
              disabled={false}
              onClick={[Function]}
            >
              create.label
            </button>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render some workspaces 1`] = `
<div
  className="!bg-blue-200 flex grow m-4 rounded"
>
  <div
    className="justify-start flex flex-wrap align-start justify-start"
  >
    <div
      className="ant-card ant-card-bordered !m-8 w-64 h-96 flex flex-col justify-between overflow-hidden"
    >
      <div
        className="ant-card-body"
        style={Object {}}
      >
        <a
          href="/workspaces/1"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          foo
        </a>
      </div>
      <ul
        className="ant-card-actions"
      >
        <li
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <span>
            <a
              href="/workspaces/1"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <button
                className="p-button p-component"
                disabled={false}
              >
                edit.label
              </button>
            </a>
          </span>
        </li>
      </ul>
    </div>
    <div
      className="ant-card ant-card-bordered !m-8 w-64 h-96 flex flex-col justify-between overflow-hidden"
    >
      <div
        className="ant-card-body"
        style={Object {}}
      >
        <a
          href="/workspaces/42"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          bar
        </a>
      </div>
      <ul
        className="ant-card-actions"
      >
        <li
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <span>
            <a
              href="/workspaces/42"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <button
                className="p-button p-component"
                disabled={false}
              >
                edit.label
              </button>
            </a>
          </span>
        </li>
      </ul>
    </div>
    <div
      className="ant-card ant-card-bordered !m-8 w-64 h-96 flex flex-col justify-between overflow-hidden"
    >
      <div
        className="ant-card-body"
        style={Object {}}
      >
        create.description
      </div>
      <ul
        className="ant-card-actions"
      >
        <li
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <span>
            <button
              className="p-button p-component"
              disabled={false}
              onClick={[Function]}
            >
              create.label
            </button>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
